--- a/chat-backend/package.json
+++ b/chat-backend/package.json
@@ -29,6 +29,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "socket.io": "^4.1.3",
     "socket.io-redis": "^6.1.1"
   },
   "devDependencies": {
