--- a/chat-client/package.json
+++ b/chat-client/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "socket.io-client": "^4.1.3",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -18,7 +19,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": [
       "react-app",
